Added other pages
Added other pages, added font. need to fix the awkward margin that's present

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <div class="leftNav">
-            <p>PIXIFY</p>
+            <a href="index.html">PIXIFY</a>
         </div>
         <div class="rightNav">
             <P>2023 Submissions</P>
