--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
     <nav>
         <div class="leftNav">
-            <p>PIXIFY</p>
+            <a href="index.html">PIXIFY</a>
         </div>
         <div class="rightNav">
             <P>2023 Submissions</P>
             <a href="about.html">About</a>
         </div>
     </nav>
-    <div id="bubble">
+    <div>
         <p id="bubble">Join our photography contest and showcase your talent to the world! Immerse yourself in a community of photographers, where creativity and passion come together. Share your best shots, be inspired by others, and have a chance to win amazing prizes. Enter now and take the first step to becoming a recognized photographer.</p>
     </div>
     <a href="submission.html"><button>SUBMIT NOW</button></a>
