--- a/submission.html
+++ b/submission.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="leftNav">
-            <p>PIXIFY</p>
+            <a href="index.html">PIXIFY</a>
         </div>
         <div class="rightNav">
             <P>2023 Submissions</P>
