Created Dark mode
fixed, minor errors, and created dark mode. This is Bravo 6, going dark.

--- a/about.html
+++ b/about.html
@@ -13,8 +13,9 @@
             <a href="index.html">PIXIFY</a>
         </div>
         <div class="rightNav">
-            <P>2023 Submissions</P>
+            <a href="submission.html">2023 Submissions</a>
             <a href="about.html">About</a>
+            <button class="darkModeButton">Dark Mode</button>
         </div>
     </nav>
     <div class="about">
@@ -27,5 +28,6 @@
     <p>So what are you waiting for? Enter our photography contest today, connect with other photographers, and take your passion to the next level with Pixify. We can't wait to see what you have in store!</p>
     <p>DEADLINE: 17TH FEBRUARY 2023</p>
     <a href="index.html"><button>SUBMIT NOW</button></a>
+    <script src="/darkButton.js"></script>
 </body>
 </html>
