--- a/submission.html
+++ b/submission.html
@@ -14,8 +14,9 @@
             <a href="index.html">PIXIFY</a>
         </div>
         <div class="rightNav">
-            <P>2023 Submissions</P>
+            <a href="submission.html">2023 Submissions</a>
             <a href="about.html">About</a>
+            <button class="darkModeButton">Dark Mode</button>
         </div>
     </nav>
     <main>
@@ -27,7 +28,7 @@
             </div>
             <div class="photo">
                 <img src="images/edward-cisneros-_H6wpor9mjs-unsplash 1.png" alt="Looking Lady">
-                <a>Faces of the World - Jane Doe               <a href="#">see more</a></p>
+                <p>Faces of the World - Jane Doe               <a href="#">see more</a></p>
             </div>
             <div class="photo">
                 <img src="images/sid-balachandran-_9a-3NO5KJE-unsplash 1.png" alt="PANDA PANDA PANDA">
@@ -56,6 +57,7 @@
                 <input type="text" placeholder="Image Url Five">
                 <button>SUBMIT</button>
             </div>
+            <script src="/darkButton.js"></script>
     </main>
 </body>
 </html>
