--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="index.html">PIXIFY</a>
         </div>
         <div class="rightNav">
-            <P>2023 Submissions</P>
+            <a href="submission.html">2023 Submissions</a>
             <a href="about.html">About</a>
         </div>
     </nav>
