--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <a href="about.html">About</a>
         </div>
     </nav>
-    <div>
-        <p id="bubble">Join our photography contest and showcase your talent to the world! Immerse yourself in a community of photographers, where creativity and passion come together. Share your best shots, be inspired by others, and have a chance to win amazing prizes. Enter now and take the first step to becoming a recognized photographer.</p>
+    <div id="bubble">
+        <p>Join our photography contest and showcase your talent to the world! Immerse yourself in a community of photographers, where creativity and passion come together. Share your best shots, be inspired by others, and have a chance to win amazing prizes. Enter now and take the first step to becoming a recognized photographer.</p>
     </div>
     <a href="submission.html"><button>SUBMIT NOW</button></a>
 </body>
