completed About Us page
About us page is complete, no visual errors and code actually looks decently clean!

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div class="leftNav">
-            <a href="index.html">PIXIFY</a>
+            <a href="#">PIXIFY</a>
         </div>
         <div class="rightNav">
             <a href="submission.html">2023 Submissions</a>
