--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="aboutStyle.css">
     <title>Document</title>
 </head>
 <body>
@@ -18,16 +19,22 @@
             <button class="darkModeButton">Dark Mode</button>
         </div>
     </nav>
-    <div class="about">
+    <main>
         <h1>ABOUT US</h1>
-        <p>Welcome to Pixify, the ultimate destination for photography enthusiasts! We are a community of passionate photographers who believe in the power of capturing life's moments and sharing them with the world.</p>
-    </div>
-    <img src="images/erik-mclean-2Wv9VnwzeeI-unsplash 1.png" alt="Say Cheese!">
-    <p>Our mission is to provide a platform for photographers to showcase their work, connect with like-minded individuals, and be recognised for their talent. That's why we created Pixify - a photography contest where photographers from all walks of life can enter their best shots and have a chance to win amazing prizes.</p>
-    <p>At Pixify, we believe that photography is not just a hobby but an art form that can tell a story, evoke emotions, and leave a lasting impression. Whether you're a professional photographer or just starting out, we welcome you to join us on this journey and share your unique perspective with the world.</p>
-    <p>So what are you waiting for? Enter our photography contest today, connect with other photographers, and take your passion to the next level with Pixify. We can't wait to see what you have in store!</p>
-    <p>DEADLINE: 17TH FEBRUARY 2023</p>
-    <a href="index.html"><button>SUBMIT NOW</button></a>
+        <p class="subheader">Welcome to Pixify, the ultimate destination for photography enthusiasts! We are a community of passionate photographers who believe in the power of capturing life's moments and sharing them with the world.</p>
+        <img class="image" src="images/erik-mclean-2Wv9VnwzeeI-unsplash 1.png" alt="Say Cheese!">
+        <div class="topic">
+            <p>Our mission is to provide a platform for photographers to showcase their work, connect with like-minded individuals, and be recognised for their talent. That's why we created Pixify - a photography contest where photographers from all walks of life can enter their best shots and have a chance to win amazing prizes.</p>
+            <p>At Pixify, we believe that photography is not just a hobby but an art form that can tell a story, evoke emotions, and leave a lasting impression. Whether you're a professional photographer or just starting out, we welcome you to join us on this journey and share your unique perspective with the world.</p>
+            <p>So what are you waiting for? Enter our photography contest today, connect with other photographers, and take your passion to the next level with Pixify. We can't wait to see what you have in store!</p>
+            <p>DEADLINE: 17TH FEBRUARY 2023</p>    
+            <button><a href="submission.html">SUBMIT NOW</a></button>
+
+
+        </div>
+
+    </main>
+
     <script src="/darkButton.js"></script>
 </body>
 </html>
