--- a/submission.html
+++ b/submission.html
@@ -23,27 +23,45 @@
         <h1>2023 SUBMISSIONS</h1>
         <div class="photo1">
             <img src="images/david-marcu-78A265wPiO4-unsplash 1.png" alt="hillside">
-            <p>Nature Adventures - Jane Doe               <a href="#">see more</a></p>
+            <div class="discription">
+                <p>Nature Adventures - Jane Doe</p> 
+                <a href="carddisplay.html">see more</a>
+            </div>
         </div>
         <div class="photo2">
             <img src="images/edward-cisneros-_H6wpor9mjs-unsplash 1.png" alt="Looking Lady">
-            <p>Faces of the World - Jane Doe               <a href="#">see more</a></p>
+            <div class="discription">
+                <p>Faces of the World - Jane Doe</p>
+                <a href="carddisplay.html">see more</a>
+            </div>
         </div>
         <div class="photo3">
             <img src="images/sid-balachandran-_9a-3NO5KJE-unsplash 1.png" alt="PANDA PANDA PANDA">
-            <P>Wild Animals - Jane Doe                              <a href="#">see more</a></P>
+            <div class="discription">
+                <P>Wild Animals - Jane Doe</P>
+                <a href="carddisplay.html">see more</a>
+            </div>
         </div>
         <div class="photo4">
             <img src="images/alvin-mahmudov-vKuEhorbvYI-unsplash 1.png" alt="Jump kid">
-            <p>Innocence - Andrew Smith              .         <a href="#">see more</a></p>
+            <div class="discription">
+                <p>Innocence - Andrew Smith</p>
+                <a href="carddisplay.html">see more</a>
+            </div>
         </div>
         <div class="photo5">
             <img src="images/jeshoots-com-mSESwdMZr-A-unsplash 1.png" alt="plane go bRRRRR">
-            <p>Travel Diaries - Irna Towsen               <a href="#">see more</a></p>
+            <div class="discription">
+                <p>Travel Diaries - Irna Towsen</p>
+                <a href="carddisplay.html">see more</a>
+            </div>
         </div>
         <div class="photo6">
             <img src="images/david-marcu-78A265wPiO4-unsplash 1.png" alt="hillside">
-            <p>Nature Adventures - Jane Doe               <a href="#">see more</a></p>
+            <div class="discription">
+                <p>Nature Adventures - Jane Doe</p>
+                <a href="carddisplay.html">see more</a>
+            </div>
         </div>
         <div class="form">
             <h2>SUBMIT YOUR WORK</h2>
