--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         </div>
         <div class="rightNav">
             <a href="submission.html">2023 Submissions</a>
-            <a href="about.html">About</a>
+            <a href="#">About</a>
             <button class="darkModeButton">Dark Mode</button>
         </div>
     </nav>
