Modified some lines
made minor changes and even made some fixes for a more appealing look

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="aboutStyle.css">
-    <title>Document</title>
+    <title>Pixify</title>
 </head>
 <body>
     <nav>
@@ -29,12 +29,8 @@
             <p>So what are you waiting for? Enter our photography contest today, connect with other photographers, and take your passion to the next level with Pixify. We can't wait to see what you have in store!</p>
             <p>DEADLINE: 17TH FEBRUARY 2023</p>    
             <button><a href="submission.html">SUBMIT NOW</a></button>
-
-
         </div>
-
     </main>
-
     <script src="/darkButton.js"></script>
 </body>
 </html>
