--- a/carddisplay.html
+++ b/carddisplay.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="cardDisplay.css">
-    <title>Pretty Pictures</title>
+    <title>Picture Submissions</title>
 </head>
 <body>
     <nav>
@@ -20,7 +20,7 @@
     </nav>
     <div class="gallery">
         <h1 id="title"></h1>
-        <h2 id="photographer"></h2>
+        <p id="photographer"></p>
         <img id="image" src="" alt="">
         <p id="number"></p>
     </div>
