--- a/submission.html
+++ b/submission.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="submissionStyle.css">
-    <title>Document</title>
+    <title>Pixify Submission</title>
 </head>
 <body>
     <nav>
@@ -74,7 +74,7 @@
             <input type="text" placeholder="Image Url Five">
             <button>SUBMIT</button>
         </div>
-        <script src="/darkButton.js"></script>
     </main>
+    <script src="/darkButton.js"></script>
 </body>
 </html>
