--- a/carddisplay.html
+++ b/carddisplay.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <nav>
-        <div class="leftNav">
+        <div class="left_Nav">
             <a href="index.html">PIXIFY</a>
         </div>
-        <div class="rightNav">
-            <a href="#">2023 Submissions</a>
+        <div class="right_Nav">
+            <a href="submission.html">2023 Submissions</a>
             <a href="about.html">About</a>
-            <button class="darkModeButton">Dark Mode</button>
+            <button class="dark_Mode_Button">Dark Mode</button>
         </div>
     </nav>
     <div class="gallery">
