--- a/submission.html
+++ b/submission.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style.css">
-    <link rel="stylesheet" href="submissionStyle.css">
+    <link rel="stylesheet" href="submission.css">
     <title>Pixify Submission</title>
 </head>
 <body>
     <nav>
-        <div class="leftNav">
+        <div class="left_Nav">
             <a href="index.html">PIXIFY</a>
         </div>
-        <div class="rightNav">
+        <div class="right_Nav">
             <a href="#">2023 Submissions</a>
             <a href="about.html">About</a>
-            <button class="darkModeButton">Dark Mode</button>
+            <button class="dark_Mode_Button">Dark Mode</button>
         </div>
     </nav>
     <main>
@@ -72,7 +72,7 @@
             <input type="text" placeholder="Image Url Three">
             <input type="text" placeholder="Image Url Four">
             <input type="text" placeholder="Image Url Five">
-            <button>SUBMIT</button>
+            <button><a href="carddisplay.html">SUBMIT</a></button>
         </div>
     </main>
     <script src="/darkButton.js"></script>
