--- a/about.html
+++ b/about.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style.css">
-    <link rel="stylesheet" href="aboutStyle.css">
+    <link rel="stylesheet" href="about.css">
     <title>Pixify</title>
 </head>
 <body>
     <nav>
-        <div class="leftNav">
+        <div class="left_Nav">
             <a href="index.html">PIXIFY</a>
         </div>
-        <div class="rightNav">
+        <div class="right_Nav">
             <a href="submission.html">2023 Submissions</a>
             <a href="#">About</a>
-            <button class="darkModeButton">Dark Mode</button>
+            <button class="dark_Mode_Button">Dark Mode</button>
         </div>
     </nav>
     <main>
