--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style.css">
-    <link rel="stylesheet" href="indexStyle.css">
+    <link rel="stylesheet" href="index.css">
     <title>Pixify</title>
 </head>
 <body>
     <nav>
-        <div class="leftNav">
+        <div class="left_Nav">
             <a href="#">PIXIFY</a>
         </div>
-        <div class="rightNav">
+        <div class="right_Nav">
             <a href="submission.html">2023 Submissions</a>
             <a href="about.html">About</a>
         </div>
